src/app/globals.css
@import url("https://use.typekit.net/bix1whw.css");

@tailwind base;
@tailwind components;
@tailwind utilities;

*,
*:before,
*:after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "router", sans-serif;
}

body {
  grid-template-rows: auto 1fr;
  gap: 1rem;
  font-family: "router", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.output {
  display: grid;
  grid-template-rows: auto 1fr;
}

.code {
  font-family: "code-saver", sans-serif;
  font-weight: 300;
  font-style: normal;
}

.frog {
  transition: all 0.35s ease-in-out;
  position: absolute;
  top: 95%;
}

.frog:hover {
  top: 91%;
}

.logo > * > *,
.logo > * > * > * {
  transition: all 0.35s ease-in-out;
}

.logo:hover > * > * > .cls-1,
.logo:hover > * > .cls-3 {
  filter: opacity(0.4);
  fill: #f7941d;
}

.logo > * > * > .cls-1,
.logo > * > .cls-3 {
  fill: #070707;
}

.logo:hover > * > * > .cls-2 {
  fill: #0f0f0f;
}

